kubernetes/DestinationRules/frontend-DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-mtls
spec:
  host: pip.homelabamplifier.com
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
