kubernetes/DestinationRules/playlist-DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: playlist-mtls
spec:
  host: playlist.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
