kubernetes/DestinationRules/track-DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: track-mtls
spec:
  host: track.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
